--- a/모두의ㅡHTMLCSS/index.html
+++ b/모두의ㅡHTMLCSS/index.html
@@ -32,18 +32,29 @@
     </header>
     <main>
       <section>
-        <h2>모두의 HTML/CSS</h2>
-        <p><strong>HELLO<br>WORLD! :)</strong></p>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui in error
-          beatae itaque, vitae ut possimus excepturi porro
-        </p>
-        <button>회원가입</button>
-        <button>Button</button>
-        <aside>
-          <a href=""></a>
-          <a href=""></a>
-        </aside>
+        <div class="mainBanner-wrapper">
+          <div class="mainBanner-contents">
+            <h2 class="mainBanner-title">모두의 HTML/CSS</h2>
+            <p class="mainBanner-txt"><strong>HELLO<br>WORLD! :)</strong></p>
+            <p class="mainBanner-desc">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br> Qui in error
+              beatae itaque, vitae ut possimus excepturi porro
+            </p>
+              <div class="mainBanner-btn-list">
+                <button  class="mainBanner-btn"><a href="">회원가입</a></button>
+                <button class="mainBanner-btn"><a href="">BUTTON</a></button>
+              </div>
+          </div>
+          <aside class="mainBanner-aside">
+            <a class="aside-item" href="">
+              <span>M.B.I.T 강의<br>
+                보러가기</span>
+              </a>
+            <a class="aside-item" href="">
+              <span>30분 요약강좌<br>보러가기</span>
+            </a>
+          </aside>
+        </div>
       </section>
       <section class="tech-stacks">
         <h2>tech-stacks</h2>
