--- a/모두의ㅡHTMLCSS/index.html
+++ b/모두의ㅡHTMLCSS/index.html
@@ -57,53 +57,55 @@
         </div>
       </section>
       <section class="tech-stacks">
-        <h2>tech-stacks</h2>
-        <!-- ul>li과 고민했다,, -->
-        <dl class="stack-list"> 
-          <dt class="stack-items">
-            <h3>HTML</h3>
-            <dd>
-                <p>Hypertext Markup</p>
-                <p>웹을 이루는 어쩌구</p>
-            </dd>
-          </dt>
-          <dt class="stack-items">
-            <h3>CSS</h3>
-            <dd>
-                <p>Cascading Style</p>
-                <p>HTML이나 어쩌구</p>
-            </dd>
-          </dt>
-          <dt class="stack-items">
-            <h3>Javascript</h3>
-            <dd>
-                <p>일급 함수를 사용하는 가벼운 객체 지향 인터프리터 언어</p>
-                <p>웹페이지의 스크립트 언어로 잘 알려져 있지만, 어쩌구</p>
-            </dd>
-          </dt> 
-        </dl>
-      </section>
-      <section class="time-schedule">
-        <h2>일정</h2>
-        <!-- 사이트 이동하는 링크라고 가정하였습니다 -->
-        <nav>
-            <ul>
-                <li>
-                    <a href="">
-                        <figure>
-                            <img src="" alt="운동">
-                            <figcaption>
-                                <p>오전 5:00</p>
-                                <h3>헛둘셋넷 열심히 운동하기</h3>
-                                <p>Lorem ipsum dolor sit.</p>
-                            </figcaption>
-                        </figure>
-                    </a>
-                </li>
-                <li><a href=""><h3>지친몸 이끌고 출근하기</h3></a></li>
-                <li><a href=""><h3>치킨과 함께하는 신나는 퇴근</h3></a></li>
-            </ul>
-        </nav>
+        <h2 class="ir">웹 언어와 즐거운 회사생활</h2>
+        <div class="tech-stacks-wrapper">
+          <dl class="stack-list">
+            <h3 class="ir">웹 언어</h3>
+            <span class="stack-items">
+              <dt>HTML</dt>
+                <dd>
+                    <p>Hypertext Markup Language 하이퍼텍스트 마크업 언어</p>
+                    <p>웹을 이루는 가장 기초적인 구성 요소로, 웹 콘텐츠의 의미와 구조를 정의할 때 사용</p>
+                </dd>
+              </dt>
+            </span>
+            <span class="stack-items">
+              <dt>CSS</dt>
+                <dd>
+                    <p>Cascading Style Sheets</p>
+                    <p>HTML이나 XML(XML의 방언인 SVG, XHTML 포함)로 작성된 문서의 표시 방법을 기술하기 위한 스타일 시트 언어</p>
+                </dd>
+              </dt>
+            </span>
+            <span class="stack-items">
+              <dt>JavaScript</dt>
+                <dd>
+                    <p>일급 함수를 사용하는 가벼운 객체 지향 인터프리터 언어</p>
+                    <p>웹페이지의 스크립트 언어로 잘 알려져 있지만, 브라우저가 아닌 환경에서도 많이 사용됨</p>
+                </dd>
+              </dt>
+            </span>
+          </dl>
+        </div>
+        <div class="schedule-wrapper">
+          <h2>일정</h2>
+          <nav>
+              <ul>
+                  <li>
+                      <figure>
+                          <img src="" alt="운동">
+                          <figcaption>
+                              <time>오전 5:00</ti>
+                              <h4>헛둘셋넷 열심히 운동하기</h4>
+                              <p>Lorem ipsum dolor sit.</p>
+                          </figcaption>
+                      </figure>
+                  </li>
+                  <li><h4>지친몸 이끌고 출근하기</h4></li>
+                  <li><h4>치킨과 함께하는 신나는 퇴근</h4></li>
+              </ul>
+          </nav>
+        </div>
       </section>
       <section class="board">
         <h2>Lorem ipsum dolor sit.</h2>
