✨ 웹 언어와 회사생활 섹션

--- a/모두의ㅡHTMLCSS/index.html
+++ b/모두의ㅡHTMLCSS/index.html
@@ -37,8 +37,7 @@
             <h2 class="mainBanner-title">모두의 HTML/CSS</h2>
             <p class="mainBanner-txt"><strong>HELLO<br>WORLD! :)</strong></p>
             <p class="mainBanner-desc">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br> Qui in error
-              beatae itaque, vitae ut possimus excepturi porro
+              라이캣은 주식회사 위니브의 대표이신 호준님을 형상화한(?) 캐릭터랍니다. <br> 사자 옷을 입은 고양이에요~ 앞에 저것은 봉제선이 아니라 지퍼랍니둥
             </p>
               <div class="mainBanner-btn-list">
                 <button  class="mainBanner-btn"><a href="">회원가입</a></button>
@@ -88,23 +87,39 @@
           </dl>
         </div>
         <div class="schedule-wrapper">
-          <h2>일정</h2>
-          <nav>
-              <ul>
-                  <li>
-                      <figure>
-                          <img src="" alt="운동">
-                          <figcaption>
-                              <time>오전 5:00</ti>
-                              <h4>헛둘셋넷 열심히 운동하기</h4>
-                              <p>Lorem ipsum dolor sit.</p>
-                          </figcaption>
-                      </figure>
-                  </li>
-                  <li><h4>지친몸 이끌고 출근하기</h4></li>
-                  <li><h4>치킨과 함께하는 신나는 퇴근</h4></li>
-              </ul>
-          </nav>
+          <h3 class="ir">일정</h3>
+            <ul class="container">
+                <li class="schedule-card">
+                    <figure>
+                        <img src="./assets/뮤라 1.png" alt="운동하는 뮤라">
+                        <figcaption class="schedule-desc">
+                            <time>오전 5:00</time>
+                            <h4>헛둘셋넷<br> 열심히 운동하기</h4>
+                            <p>미라클 모닝 그잡채</p>
+                        </figcaption>
+                    </figure>
+                </li>
+                <li class="schedule-card">
+                  <figure>
+                    <img src="./assets/소울곰_애벌래 1.png" alt="출근하는 쏠곰 앞에 애벌레가 기어가고 있다">
+                    <figcaption class="schedule-desc">
+                      <time>오전 9:00</time>
+                      <h4>지친몸 이끌고<br> 출근하기</h4>
+                      <p>그래도 운동하고 출근했으면 갓생이다! <br> 아..나도 출근하고 싶다 🥺</p>
+                    </figcaption>
+                  </figure>
+                </li>
+                <li class="schedule-card">
+                  <figure>
+                    <img src="./assets/개리_퇴근 1.png" alt="치킨을 들고 퇴근하는 개리">
+                    <figcaption class="schedule-desc">
+                      <time>오후 06:00</time>
+                      <h4>치킨과 함께하는<br>신나는 퇴근</h4>
+                      <p>퇴근하는 개리가 신나보여요 나도치킨~!</p>
+                    </figcaption>
+                  </figure>
+                </li>
+            </ul>
         </div>
       </section>
       <section class="board">
